# ModernCpp

./: .gitignore  CMakeLists.txt
Exception/: CMakeLists.txt  Exception.cpp  Exception.h
IniPaser/: CMakeLists.txt  main.cpp  split_string.cpp  split_string.h  trim.cpp  trim.h
Item2/: CMakeLists.txt  Item2.cpp  Item2.h
Item3/: CMakeLists.txt  Item3.cpp  Item3.h
Item4/: CMakeLists.txt  Item4.cpp  Item4.h
Item5/: CMakeLists.txt  Item5.cpp  Item5.h
Logger/: CMakeLists.txt  Logger.cpp  Logger.h
New/: CMakeLists.txt  New.cpp  New.h
SFINAE/: CMakeLists.txt  sfinae.cpp  sfinae.h
ThreadPool/: CMakeLists.txt  main.cpp
include/: SmartPointer.h  allocator.h
src/: CMakeLists.txt  SmartPointer.cpp  allocator.cpp
