cmake_minimum_required(VERSION 3.12)

project(ModernCpp)

set(CMAKE_CXX_STANDARD 17) #璁剧疆C++鏍囧噯

set(CMAKE_CXX_EXTENSIONS OFF) #绂佺敤缂栬瘧鍣ㄦ墿灞?

add_definitions()

# add_subdirectory(src)

# add_subdirectory(Item2)
# add_subdirectory(Item3)
# add_subdirectory(Item4)
# add_subdirectory(Item5)
# add_subdirectory(Logger)
# add_subdirectory(SFINAE)
# add_subdirectory(Exception)
add_subdirectory(New)
add_subdirectory(ThreadPool)

